# logigator-sim

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
corpus/bench/: RESULTS.md  correlated.json  fanout.json  medium_active.json  medium_idle.json  small_active.json  small_idle.json
corpus/boards/: adders.json  clk.json  cpu.json  d_ff.json  decoder.json  demux.json  encoder.json  full_adder.json  gates.json  jk_ff.json  led_matrix.json  mux.json  not_chain.json  pulse.json  ram.json  rom.json  sr_ff.json  wired_or.json
corpus/golden/: adders.json  clk.json  cpu.json  d_ff.json  decoder.json  demux.json  encoder.json  full_adder.json  gates.json  jk_ff.json  led_matrix.json  mux.json  not_chain.json  pulse.json  ram.json  rom.json  sr_ff.json  wired_or.json
corpus/tools/: bench-cpp-node.mjs  bench-node.mjs  bench-wasm.mjs  gen-bench.mjs  gen-golden.mjs  gen-one.mjs  package-lock.json  package.json
crates/sim-cli/: Cargo.toml
crates/sim-cli/src/: bench.rs  load.rs  main.rs  run.rs  trace.rs  verify.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: bitset.rs  board.rs  codec.rs  driver.rs  error.rs  lib.rs  proptests.rs  reduce.rs  scratch.rs  sim.rs  simd.rs  snapshot.rs  tick.rs  types.rs
crates/sim-core/src/components/: adders.rs  clk.rs  flipflops.rs  gates.rs  led_matrix.rs  mod.rs  ram.rs  rng.rs  rom.rs  selectors.rs  user_input.rs
crates/sim-core/tests/: bench_boards.rs  golden.rs  parallel_equiv.rs
crates/sim-node/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
crates/sim-node/__test__/: async.mjs  equivalence.mjs  parallel.mjs
crates/sim-node/src/: lib.rs  worker.rs
crates/sim-wasm/: Cargo.toml
crates/sim-wasm/src/: lib.rs
crates/sim-wasm/tests/: equivalence.rs
scripts/: assemble-npm.mjs  bump-version.mjs
