[workspace]
resolver = "2"
members = ["crates/sim-core", "crates/sim-cli", "crates/sim-wasm"]
default-members = ["crates/sim-core", "crates/sim-cli"] # bare `cargo build` skips the wasm cdylib
# The Node / xtask crates are added in their respective phases (plan §11).

[workspace.package]
edition = "2024"
rust-version = "1.85"   # edition 2024 floor (plan §3); MSRV enforced by CI
license = "MIT"
repository = "https://github.com/logigator/logigator-sim"

[workspace.dependencies]
# default-features off so each surface opts into `serde` explicitly (the wasm build toggles it via
# its own feature, plan §4.2); standalone `cargo test -p sim-core` still gets sim-core's own default.
sim-core   = { path = "crates/sim-core", default-features = false }
thiserror  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
