[workspace]
resolver = "2"
members = ["crates/sim-core", "crates/sim-cli", "crates/sim-wasm", "crates/sim-node"]
default-members = ["crates/sim-core", "crates/sim-cli"] # bare `cargo build` skips the cdylib crates

[workspace.package]
# Single source of truth for the release version; every crate inherits it, and
# scripts/bump-version.mjs keeps package.json in step (`just bump <version>`).
version = "0.1.2"
edition = "2024"
rust-version = "1.85"   # edition 2024 floor; MSRV enforced by CI
license = "AGPL-3.0-only"
repository = "https://github.com/logigator/logigator-sim"

[workspace.dependencies]
# default-features off so each surface opts into `serde` explicitly (the wasm build toggles it via
# its own feature); standalone `cargo test -p sim-core` still gets sim-core's own default.
sim-core   = { path = "crates/sim-core", default-features = false }
thiserror  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"   # the binaries ship via npm / GitHub releases; symbols only bloat the download

# The Node addon ships with unwinding so napi-rs catches Rust panics at the binding boundary
# and rethrows them as JS exceptions instead of aborting the host Node process.
[profile.release-addon]
inherits = "release"
panic = "unwind"
