[package]
name = "sim-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Logigator simulation CLI: run / bench / trace / verify boards."

[[bin]]
name = "sim"
path = "src/main.rs"

[dependencies]
# Native CLI: `serde` for board/state (de)serialization.
sim-core = { workspace = true, features = ["serde"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
