[package]
name = "sim-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Logigator logic-circuit simulation engine (SoA, change-driven tick loop)."

[features]
default = ["serde"]
# `threads` (rayon) lands in plan phase 6; `serde` gates the board/state (de)serialization.
serde = ["dep:serde"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
# Drop-in `std::time` replacement: a zero-cost re-export on native, a `performance.now()`-backed
# clock on `wasm32-unknown-unknown` (where `std::time::Instant::now()` panics). Pulls wasm-bindgen
# only on the wasm target; native builds are unaffected (plan §4.2).
web-time = "1"

[dev-dependencies]
serde_json = { workspace = true }
