[package]
name = "sim-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js native addon (napi-rs) surface for the Logigator simulation engine (plan §7.4)."

[lib]
# A Node-API addon is a `cdylib` loaded by node at runtime (napi symbols resolve on load).
crate-type = ["cdylib"]

[dependencies]
# napi9 ⊇ Node 18+ (plan §4.3). Default features off keeps the surface lean — we use the synchronous
# binding API plus `Env::create_deferred` (a threadsafe `JsDeferred`), so no tokio runtime is needed:
# the dedicated sim thread resolves promises directly (see src/worker.rs).
napi = { version = "3", default-features = false, features = ["napi9"] }
napi-derive = "3"
# Native addon: `serde` for board/state de/serialization. The engine is single-threaded; the worker
# drives plain `tick()` on its dedicated sim thread (src/worker.rs).
sim-core = { workspace = true, features = ["serde"] }
serde_json = { workspace = true } # the `fromJson` debug constructor

[build-dependencies]
napi-build = "2"
