[package]
name = "sim-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly (wasm-bindgen) surface for the Logigator simulation engine (plan §7.3)."

[lib]
# `cdylib` for the wasm-pack artifact; `rlib` so the wasm-bindgen-test suite can link the crate.
crate-type = ["cdylib", "rlib"]

[features]
# Mirrors the build recipes (plan §4.2/§4.6): the default WASM build is single-threaded with serde;
# `--no-default-features --features serde` selects exactly that. The threaded-WASM variant
# (wasm-bindgen-rayon, plan §8.5) is v2 and adds its own feature then.
default = ["serde"]
serde = ["sim-core/serde"]

[dependencies]
# Default WASM is single-threaded (JS drives ticks), so `threads` stays OFF (plan §4.1/§8.5).
# serde is gated through this crate's `serde` feature so the build recipe's flags select it.
sim-core = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
# Integration tests are separate crates and don't inherit the lib's normal deps, so the ones the
# cross-engine equivalence suite touches are repeated here (Cargo dedups the versions).
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
sim-core = { workspace = true, features = ["serde"] }

[package.metadata.wasm-pack.profile.release]
# Let LLVM auto-vectorize the bitset/word loops for simd128 (plan §1.5); hand-written SIMD is phase 7.
wasm-opt = ['-O3', '--enable-simd']
