[package]
name = "sim-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly (wasm-bindgen) surface for the Logigator simulation engine."

[lib]
# `cdylib` for the wasm-pack artifact; `rlib` so the wasm-bindgen-test suite can link the crate.
crate-type = ["cdylib", "rlib"]

[features]
# Mirrors the build recipes (justfile `build-wasm`): the WASM build carries serde;
# `--no-default-features --features serde` selects exactly that.
default = ["serde"]
serde = ["sim-core/serde"]

[dependencies]
# serde is gated through this crate's `serde` feature so the build recipe's flags select it.
sim-core = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
# Integration tests are separate crates and don't inherit the lib's normal deps, so the ones the
# cross-engine equivalence suite touches are repeated here (Cargo dedups the versions).
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
sim-core = { workspace = true, features = ["serde"] }

[package.metadata.wasm-pack.profile.release]
# Let LLVM auto-vectorize the bitset/word loops for simd128. bulk-memory and
# nontrapping-fptoint are on by default in rustc's wasm32 target, so wasm-opt must accept
# them too.
wasm-opt = ['-O3', '--enable-simd', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']
